--- a/Proyecto/Vidrieria/src/app/Components/login/login.component.html
+++ b/Proyecto/Vidrieria/src/app/Components/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="container">
+    <!-- Acá colocamos nuestro formulario HTML -->
+    <div class="card" style="width: 30%; margin-left: auto; margin-right: auto; margin-top: 10%;">
+        <div class="card-body">
+
+            <form [formGroup]="login_form" (ngSubmit)="onSubmit()" class="form-signin">
+                <h1 class="h3 mb-3 font-weight-normal text-center">Ingresar</h1>
+                <br>
+                <label for="inputEmail" class="sr-only">Email</label>
+                <input type="email" formControlName="email" id="inputEmail" class="form-control" placeholder="Email"
+                    required="" autofocus="">
+                <label for="inputPassword" class="sr-only">Contraseña</label>
+                <input type="password" formControlName="password" id="inputPassword" class="form-control"
+                    placeholder="Contraseña" required="">
+                <br>
+                <button class="btn btn-lg btn-info btn-block" type="submit" id="bIngresar" (click)="onSubmit()">Ingresar</button>
+                <br>
+                <a routerLink="/RecuperarContrasenia">Recuperar contraseña</a>
+                <p style="text-align: center;" class="mt-5 mb-3 text-muted">© 2021</p>
+            </form>
+        </div>
+
+    </div>
+</div>
