--- a/Proyecto/Vidrieria/src/app/Components/login/login.component.html
+++ b/Proyecto/Vidrieria/src/app/Components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <!-- Acá colocamos nuestro formulario HTML -->
-    <div class="card" style="width: 30%; margin-left: auto; margin-right: auto; margin-top: 10%;">
+    <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
         <div class="card-body">
 
             <form [formGroup]="login_form" (ngSubmit)="onSubmit()" class="form-signin">
