--- a/Proyecto/Vidrieria/src/app/Components/login/login.component.html
+++ b/Proyecto/Vidrieria/src/app/Components/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
         <div class="card-body">
 
-            <form [formGroup]="login_form" (ngSubmit)="onSubmit()" class="form-signin">
+            <form [formGroup]="login_form" (ngSubmit)="ngOnInit()" class="form-signin">
                 <h1 class="h3 mb-3 font-weight-normal text-center">Ingresar</h1>
                 <br>
                 <label for="inputEmail" class="sr-only">Email</label>
@@ -13,7 +13,8 @@
                 <input type="password" formControlName="password" id="inputPassword" class="form-control"
                     placeholder="Contraseña" required="">
                 <br>
-                <button class="btn btn-lg btn-info btn-block" type="submit" id="bIngresar" (click)="onSubmit()">Ingresar</button>
+                <button class="btn btn-lg btn-info btn-block" type="submit" id="bIngresar"
+                    (click)="onSubmit()">Ingresar</button>
                 <br>
                 <a routerLink="/RecuperarContrasenia">Recuperar contraseña</a>
                 <p style="text-align: center;" class="mt-5 mb-3 text-muted">© 2021</p>
